feat: button + card + grid documentation

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -9,164 +9,204 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./card.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
     <title>Sharp UI | Card</title>
   </head>
   <body>
-    <main>
-      <div class="wrapper">
-        <h1>Cards</h1>
-        <div class="card-container">
-          <h2>Basic Card</h2>
-          <p>
-            The Basic Card component comes with a Title, a Card Body and a
-            button at the end.
-          </p>
-          <div class="card card-basic">
-            <h3>Card Title</h3>
+    <div class="header">
+      <div class="logo">
+        <h1>Sharp UI</h1>
+        <p class="logo-caption">v1.0</p>
+      </div>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
+    </div>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../avatar/avatar.html">Avatar</a>
+          <a href="../alert/alert.html">Alert</a>
+          <a href="../badge/badge.html">Badge</a>
+          <a href="../button/button.html">Button</a>
+          <a href="../card/card.html">Card</a>
+          <a href="../image/image.html">Image</a>
+          <a href="../input/input.html">Input</a>
+          <a href="../modal/modal.html">Modal</a>
+          <a href="../toast/toast.html">Toast</a>
+          <a href="../rating/rating.html">Rating</a>
+          <a href="../navigation/nav.html">Navigation</a>
+          <a href="../grid/grid.html">Grid</a>
+        </div>
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Cards</h1>
+          <div class="card-container">
+            <h2>Basic Card</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-              praesentium totam reprehenderit.
+              The Basic Card component comes with a Title, a Card Body and a
+              button at the end.
             </p>
-            <button class="btn btn-secondary">Button</button>
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fbasic-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-          <h2>Social Media Card</h2>
-          <p>
-            The Social Media Card component comes with a Username and Avatar, a
-            Card Image, a Body and a few buttons at the end. All the avatar
-            class can be applied here according to your preference.
-          </p>
-          <div class="card card-social-media">
-            <div class="card-media-header">
-              <div class="card-media-first avatar avatar-sm">
-                <img src="../../assets/images/avatar-svgrepo-com.svg" alt="" />
-                <span>
-                  <h3>Name</h3>
-                  <p>8 hours ago</p>
-                </span>
+            <div class="card card-basic">
+              <h3>Card Title</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                praesentium totam reprehenderit.
+              </p>
+              <button class="btn btn-secondary">Button</button>
+            </div>
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fbasic-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+            <h2>Social Media Card</h2>
+            <p>
+              The Social Media Card component comes with a Username and Avatar,
+              a Card Image, a Body and a few buttons at the end. All the avatar
+              class can be applied here according to your preference.
+            </p>
+            <div class="card card-social-media">
+              <div class="card-media-header">
+                <div class="card-media-first avatar avatar-sm">
+                  <img
+                    src="../../assets/images/avatar-svgrepo-com.svg"
+                    alt=""
+                  />
+                  <span>
+                    <h3>Name</h3>
+                    <p>8 hours ago</p>
+                  </span>
+                </div>
+                <i class="fas fa-ellipsis-v"></i>
               </div>
-              <i class="fas fa-ellipsis-v"></i>
+              <div class="card-social-main-img">
+                <img
+                  src="../../assets/images/simon-lee.jpg"
+                  alt="random image"
+                />
+              </div>
+              <div class="card-social-discrip">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+              <div class="card-media-actionables">
+                <div class="card-icons">
+                  <span class="card-icons-start">
+                    <i class="far fa-heart"></i>
+                    <i class="far fa-comment"></i>
+                  </span>
+                  <span class="card-icons-end">
+                    <i class="far fa-bookmark"></i>
+                  </span>
+                </div>
+              </div>
             </div>
-            <div class="card-social-main-img">
-              <img src="../../assets/images/simon-lee.jpg" alt="random image" />
-            </div>
-            <div class="card-social-discrip">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
-            <div class="card-media-actionables">
-              <div class="card-icons">
-                <span class="card-icons-start">
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fsocial-media.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+            <h2>Dismissible Image Card</h2>
+            <p>
+              The Image Card component comes with an Image, a close button, a
+              Title, a Subtitle, a Card Body and a few buttons at the end.
+            </p>
+            <div class="card card-dismiss">
+              <div class="card-dismiss-img">
+                <img
+                  src="../../assets/images/simon-lee.jpg"
+                  alt="random image"
+                />
+                <i class="fas fa-times"></i>
+              </div>
+              <div class="card-dismiss-title">
+                <h3>Card Title</h3>
+                <p>author name</p>
+              </div>
+              <div class="card-dismiss-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                rerum ipsum itaque adipisci dolores ipsa.
+              </div>
+              <div class="card-dismiss-footer">
+                <button class="btn btn-secondary">Read more</button>
+                <div class="card-icons">
                   <i class="far fa-heart"></i>
                   <i class="far fa-comment"></i>
-                </span>
-                <span class="card-icons-end">
                   <i class="far fa-bookmark"></i>
-                </span>
+                </div>
               </div>
             </div>
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fsocial-media.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-          <h2>Dismissible Image Card</h2>
-          <p>
-            The Image Card component comes with an Image, a close button, a
-            Title, a Subtitle, a Card Body and a few buttons at the end.
-          </p>
-          <div class="card card-dismiss">
-            <div class="card-dismiss-img">
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fdismiss-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+            <h2>Text Overlay Card</h2>
+            <p>
+              The Text Overlay Card component comes with a Title, a Subtitle, an
+              Image Background, a caption text and a few buttons at the end.
+            </p>
+            <div class="card card-text-overlay">
               <img src="../../assets/images/simon-lee.jpg" alt="random image" />
-              <i class="fas fa-times"></i>
-            </div>
-            <div class="card-dismiss-title">
-              <h3>Card Title</h3>
-              <p>author name</p>
-            </div>
-            <div class="card-dismiss-content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea rerum
-              ipsum itaque adipisci dolores ipsa.
-            </div>
-            <div class="card-dismiss-footer">
-              <button class="btn btn-secondary">Read more</button>
-              <div class="card-icons">
-                <i class="far fa-heart"></i>
-                <i class="far fa-comment"></i>
-                <i class="far fa-bookmark"></i>
+              <div class="card-text-overlay-header">
+                <span>
+                  <h3>Card Title</h3>
+                  <p>Sub Title</p>
+                </span>
+                <i class="fas fa-ellipsis-h"></i>
+              </div>
+              <div class="card-text-overlay-footer">
+                <div class="card-icons">
+                  <span class="card-icons-start">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-comment"></i>
+                    <i class="fas fa-share"></i>
+                  </span>
+                  <span class="card-icons-end">
+                    <i class="fas fa-bookmark"></i>
+                  </span>
+                </div>
               </div>
             </div>
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fdismiss-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-          <h2>Text Overlay Card</h2>
-          <p>
-            The Text Overlay Card component comes with a Title, a Subtitle, an
-            Image Background, a caption text and a few buttons at the end.
-          </p>
-          <div class="card card-text-overlay">
-            <img src="../../assets/images/simon-lee.jpg" alt="random image" />
-            <div class="card-text-overlay-header">
-              <span>
-                <h3>Card Title</h3>
-                <p>Sub Title</p>
-              </span>
-              <i class="fas fa-ellipsis-h"></i>
-            </div>
-            <div class="card-text-overlay-footer">
-              <div class="card-icons">
-                <span class="card-icons-start">
-                  <i class="fas fa-heart"></i>
-                  <i class="fas fa-comment"></i>
-                  <i class="fas fa-share"></i>
-                </span>
-                <span class="card-icons-end">
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Ftext-overlay.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+            <h2>Ecommerce Card</h2>
+            <p>
+              The E-Commerce Card component comes with an Image, Product Title,
+              a Product Category, Price Tag, a OFF Badge and a few buttons at
+              the end.
+            </p>
+            <div class="card card-ecommerce">
+              <div class="card-ecom-header">
+                <img
+                  src="../../assets/images/pizza-pic.jpg"
+                  alt="random image"
+                />
+                <span class="card-ecom-header-offer-icon">
                   <i class="fas fa-bookmark"></i>
+                  <p>25% off</p>
                 </span>
               </div>
-            </div>
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Ftext-overlay.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-          <h2>Ecommerce Card</h2>
-          <p>
-            The E-Commerce Card component comes with an Image, Product Title, a
-            Product Category, Price Tag, a OFF Badge and a few buttons at the
-            end.
-          </p>
-          <div class="card card-ecommerce">
-            <div class="card-ecom-header">
-              <img src="../../assets/images/pizza-pic.jpg" alt="random image" />
-              <span class="card-ecom-header-offer-icon">
-                <i class="fas fa-bookmark"></i>
-                <p>25% off</p>
-              </span>
-            </div>
-            <div class="card-ecom-title">
-              <h3>Card Title</h3>
-              <p>author name</p>
-            </div>
-            <div class="card-ecom-price">
-              <span class="price-show">
-                <strike>3499₹</strike>
-                <p>999₹</p>
-              </span>
-              <span class="price-change">
-                <button class="btn btn-float btn-primary">
-                  <i class="fas fa-minus"></i>
+              <div class="card-ecom-title">
+                <h3>Card Title</h3>
+                <p>author name</p>
+              </div>
+              <div class="card-ecom-price">
+                <span class="price-show">
+                  <strike>3499₹</strike>
+                  <p>999₹</p>
+                </span>
+                <span class="price-change">
+                  <button class="btn btn-float btn-primary">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                  <p>3</p>
+                  <button class="btn btn-float btn-primary">
+                    <i class="fas fa-plus"></i>
+                  </button>
+                </span>
+              </div>
+              <div class="card-ecom-footer">
+                <button class="btn btn-primary">
+                  <i class="fas fa-shopping-cart"></i> Add to cart
                 </button>
-                <p>3</p>
-                <button class="btn btn-float btn-primary">
-                  <i class="fas fa-plus"></i>
+                <button class="btn btn-primary">
+                  <i class="fas fa-list-ul"></i> Add to Wishlist
                 </button>
-              </span>
+              </div>
             </div>
-            <div class="card-ecom-footer">
-              <button class="btn btn-primary">
-                <i class="fas fa-shopping-cart"></i> Add to cart
-              </button>
-              <button class="btn btn-primary">
-                <i class="fas fa-list-ul"></i> Add to Wishlist
-              </button>
-            </div>
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fecom-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
           </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fecom-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
