--- a/components/image/image.html
+++ b/components/image/image.html
@@ -5,42 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./image.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
     <title>Sharp UI | Image</title>
   </head>
   <body>
-    <main>
-      <div class="wrapper">
-        <h1>Images</h1>
-        <div class="image-container">
-          <h2>Responsive Image</h2>
-          <p>
-            When you increase/decrease the size of the screen the image size
-            also get's decreased using responsive image class
-            <code>image-responsive</code>.
-          </p>
-          <div class="image-responsive-container">
-            <img
-              class="image image-responsive"
-              src="../../assets/images/simon-lee.jpg"
-              alt="flower"
-            />
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-res.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-          <div class="image-round-container">
-            <h2>Image Round</h2>
-            <p>
-              You can achieve circular image using the class
-              <code>image-round</code>
-            </p>
-            <img
-              class="image image-round"
-              src="../../assets/images/simon-lee.jpg"
-              alt="flower"
-            />
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-round.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-        </div>
+    <div class="header">
+      <div class="logo">
+        <h1>Sharp UI</h1>
+        <p class="logo-caption">v1.0</p>
       </div>
-    </main>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
+    </div>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../avatar/avatar.html">Avatar</a>
+          <a href="../alert/alert.html">Alert</a>
+          <a href="../badge/badge.html">Badge</a>
+          <a href="../button/button.html">Button</a>
+          <a href="../card/card.html">Card</a>
+          <a href="../image/image.html">Image</a>
+          <a href="../input/input.html">Input</a>
+          <a href="../modal/modal.html">Modal</a>
+          <a href="../toast/toast.html">Toast</a>
+          <a href="../rating/rating.html">Rating</a>
+          <a href="../navigation/nav.html">Navigation</a>
+          <a href="../grid/grid.html">Grid</a>
+        </div>
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Images</h1>
+          <div class="image-container">
+            <h2>Responsive Image</h2>
+            <p>
+              When you increase/decrease the size of the screen the image size
+              also get's decreased using responsive image class
+              <code>image-responsive</code>.
+            </p>
+            <div class="image-responsive-container">
+              <img
+                class="image image-responsive"
+                src="../../assets/images/simon-lee.jpg"
+                alt="flower"
+              />
+            </div>
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-res.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+            <div class="image-round-container">
+              <h2>Image Round</h2>
+              <p>
+                You can achieve circular image using the class
+                <code>image-round</code>
+              </p>
+              <img
+                class="image image-round"
+                src="../../assets/images/simon-lee.jpg"
+                alt="flower"
+              />
+            </div>
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-round.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+          </div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
