--- a/components/navigation/nav.html
+++ b/components/navigation/nav.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./nav.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
     <script
       src="https://kit.fontawesome.com/1a8e4103d5.js"
       crossorigin="anonymous"
@@ -13,18 +14,45 @@
   </head>
 
   <body>
-    <main>
-      <div class="wrapper">
-        <h1>Navigation</h1>
-        <p>
-          Navigation is at the top of the page and helps users to navigate
-          throught the page
-        </p>
-        <a href="./wholeNav.html">
-          <button class="btn btn-primary">Click for Nav</button>
-        </a>
-        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fnavigation%2Fnavigation.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
+    <div class="header">
+      <div class="logo">
+        <h1>Sharp UI</h1>
+        <p class="logo-caption">v1.0</p>
       </div>
-    </main>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
+    </div>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../avatar/avatar.html">Avatar</a>
+          <a href="../alert/alert.html">Alert</a>
+          <a href="../badge/badge.html">Badge</a>
+          <a href="../button/button.html">Button</a>
+          <a href="../card/card.html">Card</a>
+          <a href="../image/image.html">Image</a>
+          <a href="../input/input.html">Input</a>
+          <a href="../modal/modal.html">Modal</a>
+          <a href="../toast/toast.html">Toast</a>
+          <a href="../rating/rating.html">Rating</a>
+          <a href="../navigation/nav.html">Navigation</a>
+          <a href="../grid/grid.html">Grid</a>
+        </div>
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Navigation</h1>
+          <p>
+            Navigation is at the top of the page and helps users to navigate
+            throught the page
+          </p>
+          <a target="_blank" href="./wholeNav.html">
+            <button class="btn btn-primary">Click for Nav</button>
+          </a>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fnavigation%2Fnavigation.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
