--- a/components/rating/rating.html
+++ b/components/rating/rating.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./rating.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
     <script
       src="https://kit.fontawesome.com/1a8e4103d5.js"
       crossorigin="anonymous"
@@ -12,27 +13,55 @@
     <title>Sharp UI | Rating</title>
   </head>
   <body>
-    <main>
-      <div class="wrapper">
-        <h1>Rating</h1>
-        <p>
-          When clicked on a star all the preseding star will turn gold. On
-          double click rating will get reset. <code>rating-star</code> class
-          should be added to enable this feature. <code>rating</code> variable
-          is provided so that you can show what is the rating
-        </p>
-        <div class="rating-container">
-          <i class="rating-star far fa-star"></i>
-          <i class="rating-star far fa-star"></i>
-          <i class="rating-star far fa-star"></i>
-          <i class="rating-star far fa-star"></i>
-          <i class="rating-star far fa-star"></i>
-        </div>
-        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Frating%2Frating.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-        <h2>JavaScript Code</h2>
-        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Frating%2Frating.js&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+    <div class="header">
+      <div class="logo">
+        <h1>Sharp UI</h1>
+        <p class="logo-caption">v1.0</p>
       </div>
-    </main>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
+    </div>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../avatar/avatar.html">Avatar</a>
+          <a href="../alert/alert.html">Alert</a>
+          <a href="../badge/badge.html">Badge</a>
+          <a href="../button/button.html">Button</a>
+          <a href="../card/card.html">Card</a>
+          <a href="../image/image.html">Image</a>
+          <a href="../input/input.html">Input</a>
+          <a href="../modal/modal.html">Modal</a>
+          <a href="../toast/toast.html">Toast</a>
+          <a href="../rating/rating.html">Rating</a>
+          <a href="../navigation/nav.html">Navigation</a>
+          <a href="../grid/grid.html">Grid</a>
+        </div>
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Rating</h1>
+          <p>
+            When clicked on a star all the preseding star will turn gold. On
+            double click rating will get reset. <code>rating-star</code> class
+            should be added to enable this feature. <code>rating</code> variable
+            is provided so that you can show what is the rating
+          </p>
+          <div class="rating-container">
+            <i class="rating-star far fa-star"></i>
+            <i class="rating-star far fa-star"></i>
+            <i class="rating-star far fa-star"></i>
+            <i class="rating-star far fa-star"></i>
+            <i class="rating-star far fa-star"></i>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Frating%2Frating.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+          <h2>JavaScript Code</h2>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Frating%2Frating.js&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+        </div>
+      </main>
+    </div>
+
     <script src="./rating.js"></script>
   </body>
 </html>
