update : links in sidebar

--- a/components/get-started/get-started.html
+++ b/components/get-started/get-started.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./grid.css" />
+    <link rel="stylesheet" href="./get-started.css" />
     <link rel="stylesheet" href="../../css/layout.css" />
     <script
       src="https://kit.fontawesome.com/1a8e4103d5.js"
       crossorigin="anonymous"
     ></script>
-    <title>Sharp UI | Grid</title>
+    <title>Sharp UI | Get Started</title>
   </head>
   <body>
     <div class="header">
@@ -46,37 +46,7 @@
         </div>
       </aside>
       <main>
-        <div class="wrapper">
-          <h1>Grid</h1>
-          <p>
-            CSS Grid is a two-dimensional grid system used to work on the layout
-            of UI elements and segments of a webpage. <code>gap-15</code> refers
-            to <code>gap:15px</code>,this applies to <code>gap-10</code>
-          </p>
-          <h2>Grid 2 Rows and 2 colums</h2>
-
-          <div class="grid grid-row-2 gap-10">
-            <div class="yellow"></div>
-            <div class="red"></div>
-          </div>
-          <div class="grid grid-colm-2 gap-15">
-            <div class="yellow"></div>
-            <div class="red"></div>
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fgrid%2Fgrid-2.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
-          <h2>Grid 3 Rows and 3 Columns</h2>
-          <div class="grid grid-row-3 gap-10">
-            <div class="yellow"></div>
-            <div class="red"></div>
-            <div class="blue"></div>
-          </div>
-          <div class="grid grid-column-3 gap-10">
-            <div class="yellow"></div>
-            <div class="red"></div>
-            <div class="blue"></div>
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fgrid%2Fgrid-3.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
-        </div>
+        <div class="wrapper"></div>
       </main>
     </div>
   </body>
