--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -22,20 +22,26 @@
     <div class="main-content">
       <aside>
         <div class="sidebar-list-container">
-          <a href="../avatar/avatar.html">Avatar</a>
-          <a href="../alert/alert.html">Alert</a>
-          <a href="../badge/badge.html">Badge</a>
-          <a href="../button/button.html">Button</a>
-          <a href="../card/card.html">Card</a>
-          <a href="../image/image.html">Image</a>
-          <a href="../input/input.html">Input</a>
-          <a href="../modal/modal.html">Modal</a>
-          <a href="../toast/toast.html">Toast</a>
-          <a href="../rating/rating.html">Rating</a>
-          <a href="../navigation/nav.html">Navigation</a>
-          <a href="../grid/grid.html">Grid</a>
+	<a href="../get-started/get-started.html">
+            <strong>Get Started</strong></a
+          >
+          <p class="sidebar-label">Components</p>
+          <div class="component-links">
+            <a href="../avatar/avatar.html">Avatar</a>
+            <a href="../alert/alert.html">Alert</a>
+            <a href="../badge/badge.html">Badge</a>
+            <a href="../button/button.html">Button</a>
+            <a href="../card/card.html">Card</a>
+            <a href="../image/image.html">Image</a>
+            <a href="../input/input.html">Input</a>
+            <a href="../modal/modal.html">Modal</a>
+            <a href="../toast/toast.html">Toast</a>
+            <a href="../rating/rating.html">Rating</a>
+            <a href="../navigation/nav.html">Navigation</a>
+            <a href="../grid/grid.html">Grid</a>
+          </div>
         </div>
-      </aside>
+</aside>  
       <main>
         <div class="wrapper">
           <h1>Avatar</h1>
