--- a/components/navigation/wholeNav.html
+++ b/components/navigation/wholeNav.html
@@ -43,5 +43,8 @@
         </div>
       </div>
     </div>
+    <div class="footer-nav">
+      <a href="./nav.html"><h3>< Back</h3></a>
+    </div>
   </body>
 </html>
