get-started page

--- a/components/get-started/get-started.html
+++ b/components/get-started/get-started.html
@@ -46,7 +46,12 @@
         </div>
       </aside>
       <main>
-        <div class="wrapper"></div>
+        <div class="wrapper">
+          <h1>Getting Started</h1>
+          <p>Getting up and running with Sharp-UI</p>
+          <h2>CSS link</h2>
+          <h2>HTML template</h2>
+        </div>
       </main>
     </div>
   </body>
