--- a/css/layout.css
+++ b/css/layout.css
@@ -25,7 +25,11 @@ aside{
     flex-direction: column;
 }
 .component-links a{
-    padding-left: 2rem;
+    transition: 400ms;
+}
+.component-links a:hover{
+    transition:400ms ;
+    padding-left: 1.2rem;
 }
 .sidebar-li{
     width: 100%;
