feat: highlight sidebar

--- a/components/get-started/get-started.html
+++ b/components/get-started/get-started.html
@@ -22,7 +22,7 @@
   <div class="main-content">
     <aside>
       <div class="sidebar-list-container">
-        <a href="../get-started/get-started.html">
+        <a class="current" href="../get-started/get-started.html">
           <strong>Get Started</strong></a>
         <p class="sidebar-label">Components</p>
         <div class="component-links">
