--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -1,86 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./modal.css" />
-    <link rel="stylesheet" href="../../css/layout.css" />
-    <script
-      src="https://kit.fontawesome.com/1a8e4103d5.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Sharp UI | Modal</title>
-  </head>
-  <body>
-    <div class="header">
-      <div class="logo">
-        <h1>Sharp UI</h1>
-        <p class="logo-caption">v1.0</p>
-      </div>
-      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
-        ><i class="header-icon fab fa-github"></i
-      ></a>
-    </div>
-    <div class="main-content">
-      <aside>
-        <div class="sidebar-list-container">
-          <a href="../get-started/get-started.html">
-            <strong>Get Started</strong></a
-          >
-          <p class="sidebar-label">Components</p>
-          <div class="component-links">
-            <a href="../avatar/avatar.html">Avatar</a>
-            <a href="../alert/alert.html">Alert</a>
-            <a href="../badge/badge.html">Badge</a>
-            <a href="../button/button.html">Button</a>
-            <a href="../card/card.html">Card</a>
-            <a href="../image/image.html">Image</a>
-            <a href="../input/input.html">Input</a>
-            <a href="../modal/modal.html">Modal</a>
-            <a href="../toast/toast.html">Toast</a>
-            <a href="../rating/rating.html">Rating</a>
-            <a href="../navigation/nav.html">Navigation</a>
-            <a href="../grid/grid.html">Grid</a>
-          </div>
-        </div>
-      </aside>
-      <main>
-        <div class="wrapper">
-          <h1>Modals</h1>
-          <p>
-            Modal pops up when you want full attension of the user on one
-            activity and eveything in the background is diabled
-          </p>
-          <button class="modal-btn btn btn-primary">Click Me!</button>
 
-          <div class="modal-container">
-            <div class="grey-effect"></div>
-            <div class="modal">
-              <div class="modal-header">
-                <h2>Modal Title</h2>
-                <i class="modal-close fas fa-times"></i>
-              </div>
-              <div class="modal-content">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-                  blanditiis, explicabo deleniti rerum.
-                </p>
-              </div>
-              <div class="modal-actionables">
-                <button class="btn btn-primary">Primary</button>
-                <button class="btn btn-outline-secondary">secondary</button>
-              </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./modal.css" />
+  <link rel="stylesheet" href="../../css/layout.css" />
+  <script src="https://kit.fontawesome.com/1a8e4103d5.js" crossorigin="anonymous"></script>
+  <title>Sharp UI | Modal</title>
+</head>
+
+<body>
+  <div class="header">
+    <div class="logo">
+      <h1>Sharp UI</h1>
+      <p class="logo-caption">v1.0</p>
+    </div>
+    <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"><i class="header-icon fab fa-github"></i></a>
+  </div>
+  <div class="main-content">
+    <aside>
+      <div class="sidebar-list-container">
+        <a href="../get-started/get-started.html">
+          <strong>Get Started</strong></a>
+        <p class="sidebar-label">Components</p>
+        <div class="component-links">
+          <a href="../avatar/avatar.html">Avatar</a>
+          <a href="../alert/alert.html">Alert</a>
+          <a href="../badge/badge.html">Badge</a>
+          <a href="../button/button.html">Button</a>
+          <a href="../card/card.html">Card</a>
+          <a href="../image/image.html">Image</a>
+          <a href="../input/input.html">Input</a>
+          <a class="current" href="../modal/modal.html">Modal</a>
+          <a href="../toast/toast.html">Toast</a>
+          <a href="../rating/rating.html">Rating</a>
+          <a href="../navigation/nav.html">Navigation</a>
+          <a href="../grid/grid.html">Grid</a>
+        </div>
+      </div>
+    </aside>
+    <main>
+      <div class="wrapper">
+        <h1>Modals</h1>
+        <p>
+          Modal pops up when you want full attension of the user on one
+          activity and eveything in the background is diabled
+        </p>
+        <button class="modal-btn btn btn-primary">Click Me!</button>
+
+        <div class="modal-container">
+          <div class="grey-effect"></div>
+          <div class="modal">
+            <div class="modal-header">
+              <h2>Modal Title</h2>
+              <i class="modal-close fas fa-times"></i>
+            </div>
+            <div class="modal-content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                blanditiis, explicabo deleniti rerum.
+              </p>
+            </div>
+            <div class="modal-actionables">
+              <button class="btn btn-primary">Primary</button>
+              <button class="btn btn-outline-secondary">secondary</button>
             </div>
           </div>
-          <h2>Html code</h2>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fmodal%2Fbasic-modal.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-          <h2>Js code</h2>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fmodal%2Fbasic-modal.js&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
-      </main>
-    </div>
+        <h2>Html code</h2>
+        <script
+          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fmodal%2Fbasic-modal.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+        <h2>Js code</h2>
+        <script
+          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fmodal%2Fbasic-modal.js&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+      </div>
+    </main>
+  </div>
 
-    <script src="./modal.js"></script>
-  </body>
+  <script src="./modal.js"></script>
+</body>
+
 </html>
