--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -1,74 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./alert.css" />
-    <link rel="stylesheet" href="../../css/layout.css" />
-    <link rel="stylesheet" href="../button/button.css" />
-    <title>Sharp UI | Alert</title>
-  </head>
 
-  <body>
-    <div class="header">
-      <div class="logo">
-        <h1>Sharp UI</h1>
-        <p class="logo-caption">v1.0</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./alert.css" />
+  <link rel="stylesheet" href="../../css/layout.css" />
+  <link rel="stylesheet" href="../button/button.css" />
+  <title>Sharp UI | Alert</title>
+</head>
+
+<body>
+  <div class="header">
+    <div class="logo">
+      <h1>Sharp UI</h1>
+      <p class="logo-caption">v1.0</p>
+    </div>
+    <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"><i class="header-icon fab fa-github"></i></a>
+  </div>
+  <div class="main-content">
+    <aside>
+      <div class="sidebar-list-container">
+        <a href="../get-started/get-started.html">
+          <strong>Get Started</strong></a>
+        <p class="sidebar-label">Components</p>
+        <div class="component-links">
+          <a href="../avatar/avatar.html">Avatar</a>
+          <a class="current" href="../alert/alert.html">Alert</a>
+          <a href="../badge/badge.html">Badge</a>
+          <a href="../button/button.html">Button</a>
+          <a href="../card/card.html">Card</a>
+          <a href="../image/image.html">Image</a>
+          <a href="../input/input.html">Input</a>
+          <a href="../modal/modal.html">Modal</a>
+          <a href="../toast/toast.html">Toast</a>
+          <a href="../rating/rating.html">Rating</a>
+          <a href="../navigation/nav.html">Navigation</a>
+          <a href="../grid/grid.html">Grid</a>
+        </div>
       </div>
-      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
-        ><i class="header-icon fab fa-github"></i
-      ></a>
-    </div>
-    <div class="main-content">
-      <aside>
-        <div class="sidebar-list-container">
-          <a href="../get-started/get-started.html">
-            <strong>Get Started</strong></a
-          >
-          <p class="sidebar-label">Components</p>
-          <div class="component-links">
-            <a href="../avatar/avatar.html">Avatar</a>
-            <a href="../alert/alert.html">Alert</a>
-            <a href="../badge/badge.html">Badge</a>
-            <a href="../button/button.html">Button</a>
-            <a href="../card/card.html">Card</a>
-            <a href="../image/image.html">Image</a>
-            <a href="../input/input.html">Input</a>
-            <a href="../modal/modal.html">Modal</a>
-            <a href="../toast/toast.html">Toast</a>
-            <a href="../rating/rating.html">Rating</a>
-            <a href="../navigation/nav.html">Navigation</a>
-            <a href="../grid/grid.html">Grid</a>
+    </aside>
+    <main>
+      <div class="wrapper">
+        <h1>Alert</h1>
+        <p>
+          An alert displays a short, important message in a way that attracts
+          the user's attention without interrupting the user's task.
+        </p>
+        <h2>Simple Alerts</h2>
+        <div class="alert-container">
+          <div class="alert alert-info">
+            <i class="fas fa-info-circle"></i>A info alert example!
+          </div>
+          <div class="alert alert-success">
+            <i class="fas fa-check-circle"></i>A success alert example!
+          </div>
+          <div class="alert alert-warning">
+            <i class="fas fa-exclamation-triangle"></i>A warning alert
+            example!
+          </div>
+          <div class="alert alert-danger">
+            <i class="fas fa-exclamation-circle"></i>A danger alert example!
           </div>
         </div>
-      </aside>
-      <main>
-        <div class="wrapper">
-          <h1>Alert</h1>
-          <p>
-            An alert displays a short, important message in a way that attracts
-            the user's attention without interrupting the user's task.
-          </p>
-          <h2>Simple Alerts</h2>
-          <div class="alert-container">
-            <div class="alert alert-info">
-              <i class="fas fa-info-circle"></i>A info alert example!
-            </div>
-            <div class="alert alert-success">
-              <i class="fas fa-check-circle"></i>A success alert example!
-            </div>
-            <div class="alert alert-warning">
-              <i class="fas fa-exclamation-triangle"></i>A warning alert
-              example!
-            </div>
-            <div class="alert alert-danger">
-              <i class="fas fa-exclamation-circle"></i>A danger alert example!
-            </div>
-          </div>
-          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Falert%2Falert.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
-        </div>
-      </main>
-    </div>
-  </body>
+        <script
+          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Falert%2Falert.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
+      </div>
+    </main>
+  </div>
+</body>
+
 </html>
